--- a/Mango.Web/appsettings.json
+++ b/Mango.Web/appsettings.json
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
   "ServiceUrls": {
-    "ProductAPI": "https://localhost:7056"
+    "ProductAPI": "https://localhost:7056",
+    "IdentityAPI": "https://localhost:7228"
   }
 }
