Section 10 - Add Coupon API

--- a/Mango.Web/appsettings.json
+++ b/Mango.Web/appsettings.json
@@ -9,6 +9,7 @@
   "ServiceUrls": {
     "ProductAPI": "https://localhost:7056",
     "ShoppingCartAPI": "https://localhost:7140",
-    "IdentityAPI": "https://localhost:7228"
+    "IdentityAPI": "https://localhost:7228",
+    "CouponAPI": "https://localhost:7280"
   }
 }
