--- a/Mango.Services.ShoppingCartAPI/Mango.Services.ShoppingCartAPI.csproj
+++ b/Mango.Services.ShoppingCartAPI/Mango.Services.ShoppingCartAPI.csproj
@@ -23,4 +23,8 @@
     <PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" Version="6.5.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Mango.MessageBus\Mango.MessageBus.csproj" />
+  </ItemGroup>
+
 </Project>
