Section 16 - Payment flow & Message Bus

--- a/Mango.Services.OrderAPI/appsettings.json
+++ b/Mango.Services.OrderAPI/appsettings.json
@@ -11,5 +11,7 @@
   },
   "ServiceBusConnectionString": "Endpoint=sb://mango-restaurant-91.servicebus.windows.net/;SharedAccessKeyName=RootManageSharedAccessKey;SharedAccessKey=DsowWUA2PVgNA4SDeMZGvLjCtH2LNTzVS+ASbGR/A2k=",
   "CheckoutMessageTopic": "checkoutmessagetopic",
-  "SubscriptionCheckOut": "mangoOrderSubscription"
+  "SubscriptionCheckOut": "mangoOrderSubscription",
+  "OrderPaymentProcessTopics": "orderpaymentprocesstopic",
+  "OrderUpdatePaymentResultTopic": "orderupdatepaymentresulttopic"
 }
