Section 17 - Email Service

--- a/Mango.Services.Email/appsettings.json
+++ b/Mango.Services.Email/appsettings.json
@@ -6,8 +6,10 @@
     }
   },
   "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=MangoEmailAPI;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
   "ServiceBusConnectionString": "Endpoint=sb://mango-restaurant-91.servicebus.windows.net/;SharedAccessKeyName=RootManageSharedAccessKey;SharedAccessKey=DsowWUA2PVgNA4SDeMZGvLjCtH2LNTzVS+ASbGR/A2k=",
-  "OrderPaymentProcessTopics": "orderpaymentprocesstopic",
-  "OrderPaymentProcessSubscription": "mangoPayment",
+  "SubscriptionName": "emailSubscription",
   "OrderUpdatePaymentResultTopic": "orderupdatepaymentresulttopic"
 }
